# solving-equations

./: .gitignore  CMakeLists.txt  HalfDivide-solving-equations.cpp  HalfDivide-solving-equations.h  Newton-sloving-equations.cpp  Newton-sloving-equations.h  README.md  Secant_method-solving-equations.cpp  Secant_method-solving-equations.h  build.cmd  equations.cpp  equations.h  main.cpp  main.h  release.cmd  run.cmd  solving-equations.cpp  solving-equations.h  solving-equations.hpp  解方程.cpp
Redistributable/: all.cpp  all.h  solving-equations.cpp
solving-equations/: HalfDivide.cpp  HalfDivide.h  Newton.cpp  Newton.h  Secant.cpp  Secant.h  Secant_method.cpp  Secant_method.h  all.cpp  all.h  solving-equations.cpp  solving-equations.h
